2005-07-13  William Jon McCann  <mccann@jhu.edu>

	* gui/gdmphotosetup.c (main): Use new gstdio
	functions and set correct permission on .face.

2005-07-11  Brian Cameron  <brian.cameron@sun.com>

	* configure.in: Cleaned up configure file.
	* gui/gdmsession.c: Changed "Gnome" to "GNOME".

2005-06-30  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.8.0.1
	* NEWS, configure.in:  Updated for new release.

2005-06-30  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml: Corrected grammar.  Thanks
	  to Martin Petersen for noticing this.
	* gui/gdmlogin.c, gui/gdmsetup.c:  No longer
	  use C99 features that do not work with gcc
	  2.95, specifically do not declare variables
	  except at the beginning of a block.  Fixes
	  bug #309110, patch provied by Jens
	  Granseuer.
	* autgogen.sh: Add back USE_GNOME_MACROS2=1
	  It doesn't do anything if using GNOME 2.10
	  or later, but allows people using older
	  gnome-autogen.sh to build.

2005-06-22  Brian Cameron  <brian.cameron@sun.com>

	* configure.in, vicious-extensions/Makefile.am,
	  daemon/Makefile.am, gui/Makefile.am, 
	  gui/greeter/Makefile.am: Upgrading to 
	  pkgconfig 0.17.2 broke the Solaris build 
	  because it no longer allows the linker to
	  pull in libraries that are implicitely
	  included.  Now explicitely specify the
	  dependant libraries and ensure they are
	  included in the link statements for each
	  binary.
	* verify-pam.c: Minor correction to Solaris
	  audit logic provided by Gary Winiger.
	  <Gary.Winiger@sun.com>

2005-06-20  Brian Cameron  <brian.cameron@sun.com>

	* autogen.sh: Updated REQUIRED_AUTOMAKE_VERSION
	  from 1.4 to 1.5 since it no longer requires 1.4
	  and gnome-autogen.sh would complain if you had
	  a newer version of automake.  Fixes bug 
	  #307543.

	* daemon/slave.c: On 04/25, a change was made
	  to move seteuid/setegid to before checking
	  the existance of the user's $HOME id to fix
	  bug #301821.  That patch added new seteuid/setegid