@@ -1,3 +1,10 @@
+2005-07-14  Brian Cameron  <brian.cameron@sun.com>
+
+	* daemon/getvt.c, daemon/gdm.c: Support 
+	  DragonFly VT since it is the same as FreeBSD.
+	  Patch provided by Joerg Sonnenberger
+	  <joerg@bec.de>.  Fixes bug #310218.
+
 2005-07-13  William Jon McCann  <mccann@jhu.edu>
 
 	* gui/gdmphotosetup.c (main): Use new gstdio
